--- a/recursos/css/estilo.css
+++ b/recursos/css/estilo.css
@@ -123,51 +123,51 @@ body {
     background-color: #F44336;
 }
 
-.modulo.cor {
-    border: 2px solid # ?;
+.modulo.azul {
+    border: 2px solid #2196F3;
 }
-.modulo.cor > h3 {
-    background-color: # ?;
-}
-
-.modulo.cor {
-    border: 2px solid # ?;
-}
-.modulo.cor > h3 {
-    background-color: # ?;
+.modulo.azul > h3 {
+    background-color: #2196F3;
 }
 
-.modulo.cor {
-    border: 2px solid # ?;
+.modulo.roxo {
+    border: 2px solid #9C27B0;
 }
-.modulo.cor > h3 {
-    background-color: # ?;
-}
-
-.modulo.cor {
-    border: 2px solid # ?;
-}
-.modulo.cor > h3 {
-    background-color: # ?;
+.modulo.roxo > h3 {
+    background-color: #9C27B0;
 }
 
-.modulo.cor {
-    border: 2px solid # ?;
+.modulo.laranja {
+    border: 2px solid #FF9800;
 }
-.modulo.cor > h3 {
-    background-color: # ?;
-}
-
-.modulo.cor {
-    border: 2px solid # ?;
-}
-.modulo.cor > h3 {
-    background-color: # ?;
+.modulo.laranja > h3 {
+    background-color: #FF9800;
 }
 
-.modulo.cor {
-    border: 2px solid # ?;
+.modulo.verde-escuro {
+    border: 2px solid #1B5E20;
 }
-.modulo.cor > h3 {
-    background-color: # ?;
+.modulo.verde-escuro > h3 {
+    background-color: #1B5E20;
+}
+
+.modulo.vermelho-escuro {
+    border: 2px solid #B71C1C;
+}
+.modulo.vermelho-escuro > h3 {
+    background-color: #B71C1C;
+}
+
+.modulo.azul-escuro {
+    border: 2px solid #0D47A1;
+}
+.modulo.azul-escuro > h3 {
+    background-color: #0D47A1;
+}
+
+.modulo.roxo-escuro {
+    border: 2px solid #4A148C;
+}
+.modulo.roxo-escuro > h3 {
+    background-color: #4A148C;
 }
