--- a/recursos/css/estilo.css
+++ b/recursos/css/estilo.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Oswald', sans-serif;
+    font-family: "Oswald", sans-serif;
     box-sizing: border-box;
 }
 
@@ -110,64 +110,73 @@ body {
 }
 
 .modulo.verde {
-    border: 2px solid #4CAF50;
+    border: 2px solid #4caf50;
 }
 .modulo.verde > h3 {
-    background-color: #4CAF50;
+    background-color: #4caf50;
 }
 
 .modulo.vermelho {
-    border: 2px solid #F44336;
+    border: 2px solid #f44336;
 }
 .modulo.vermelho > h3 {
-    background-color: #F44336;
+    background-color: #f44336;
 }
 
 .modulo.azul {
-    border: 2px solid #2196F3;
+    border: 2px solid #2196f3;
 }
 .modulo.azul > h3 {
-    background-color: #2196F3;
+    background-color: #2196f3;
 }
 
 .modulo.roxo {
-    border: 2px solid #9C27B0;
+    border: 2px solid #9c27b0;
 }
 .modulo.roxo > h3 {
-    background-color: #9C27B0;
+    background-color: #9c27b0;
 }
 
 .modulo.laranja {
-    border: 2px solid #FF9800;
+    border: 2px solid #ff9800;
 }
 .modulo.laranja > h3 {
-    background-color: #FF9800;
+    background-color: #ff9800;
 }
 
 .modulo.verde-escuro {
-    border: 2px solid #1B5E20;
+    border: 2px solid #1b5e20;
 }
 .modulo.verde-escuro > h3 {
-    background-color: #1B5E20;
+    background-color: #1b5e20;
 }
 
 .modulo.vermelho-escuro {
-    border: 2px solid #B71C1C;
+    border: 2px solid #b71c1c;
 }
 .modulo.vermelho-escuro > h3 {
-    background-color: #B71C1C;
+    background-color: #b71c1c;
 }
 
 .modulo.azul-escuro {
-    border: 2px solid #0D47A1;
+    border: 2px solid #0d47a1;
 }
 .modulo.azul-escuro > h3 {
-    background-color: #0D47A1;
+    background-color: #0d47a1;
 }
 
 .modulo.roxo-escuro {
-    border: 2px solid #4A148C;
+    border: 2px solid #4a148c;
 }
 .modulo.roxo-escuro > h3 {
-    background-color: #4A148C;
+    background-color: #4a148c;
+}
+
+p.divisao {
+    margin-bottom: 0;
+    font-weight: bold;
+}
+
+hr {
+    margin-top: 0;
 }
