--- a/recursos/css/estilo.css
+++ b/recursos/css/estilo.css
@@ -172,6 +172,13 @@ body {
     background-color: #4a148c;
 }
 
+.modulo.laranja-escuro {
+    border: 2px solid #e65527;
+}
+.modulo.laranja-escuro > h3 {
+    background-color: #e65527;
+}
+
 p.divisao {
     margin-bottom: 0;
     font-weight: bold;
